// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inPostItem_foot render approve post foot correctly 1`] = `
<styled.div>
  <Connect(InPostItemFootBorrow)
    myBorrowShareId="3"
  />
</styled.div>
`;

exports[`inPostItem_foot render request post foot correctly 1`] = `
<styled.div>
  <Connect(InPostItemFootRequest)
    myRequestShareId="2"
  />
</styled.div>
`;
